--- a/kubectx.spec.tmpl
+++ b/kubectx.spec.tmpl
@@ -2,6 +2,7 @@
 %global with_debug 0
 %global with_unit_test 0
 %global _dwz_low_mem_die_limit 0
+%global _debugsource_packages %{nil}
 
 Name:           kubectx
 Version:        ${new_version}
